<resources>
    <string name="app_name">"Student Scheduler"</string>
    <string name="action_settings">Credit</string>
    <string name="title_activity_create_term">CreateTermActivity</string>
    <string name="term_name">Term Name</string>
    <string name="start_date">Start YYYY-MM-DD</string>
    <string name="end_date">End YYYY-MM-DD</string>
    <string name="title_activity_view_term">ViewTermActivity</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="title_activity_assessment">Assessment</string>
    <string name="lorem_ipsem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ut bibendum tortor. Nam tincidunt neque est, a fermentum erat tristique dictum. Quisque rutrum risus non ante elementum molestie. Aenean hendrerit semper sollicitudin. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Aliquam et fringilla mauris. Vivamus a mattis ligula. Suspendisse ante diam, commodo et ullamcorper nec, vulputate ut magna. Integer pulvinar nisl sed pretium hendrerit.
Donec bibendum tellus et accumsan imperdiet. Aenean fringilla nibh dolor, eu imperdiet orci ultricies a. Phasellus mi magna, semper ut tincidunt quis, semper in justo. Vestibulum rutrum consequat massa quis pulvinar. Proin ut ex ultrices, laoreet nisl eget, vulputate risus. Quisque dapibus, sapien pharetra interdum finibus, dui velit accumsan nulla, nec pharetra leo ligula bibendum metus. Quisque at mauris vitae nisi sodales pellentesque.
Nunc vulputate arcu quis mi congue, et scelerisque erat maximus. Quisque ut nunc iaculis, convallis erat eget, posuere nulla. Aliquam tempor eros sed mi finibus, in accumsan sapien porta. Praesent vitae nulla aliquet, bibendum mauris id, volutpat lectus. Aenean laoreet justo nec nisi luctus finibus. Pellentesque ante eros, varius ut tellus tincidunt, molestie interdum dolor. In varius eget mi eget tempus.
Aenean tincidunt blandit erat, sit amet convallis sem cursus a. Proin sodales suscipit enim et ultricies. Aenean facilisis ipsum et ante facilisis tristique sed vitae tortor. Suspendisse eget convallis ligula, ut scelerisque lacus. Nam pellentesque, neque maximus consectetur consequat, ante ipsum scelerisque nibh, ac lobortis justo lacus commodo ex. Donec quis ex sed sapien mollis aliquet. Sed molestie, lectus a iaculis ullamcorper, est nisl egestas arcu, sed ullamcorper ante erat non tellus. Nulla commodo, dui nec iaculis dictum, orci eros elementum nunc, at pharetra justo elit eu dolor. Nulla convallis enim vitae mi dignissim, eu volutpat mauris pellentesque. Pellentesque tempor vulputate velit eu pharetra. Nulla semper sollicitudin risus sit amet varius. Cras cursus sit amet quam in sagittis. Cras varius nisl vitae nulla dignissim, quis dignissim odio placerat. Maecenas sit amet feugiat dui. Morbi iaculis eget nisl in molestie.
Mauris mauris sapien, luctus a porttitor quis, rutrum ut lacus. Donec eget leo semper, venenatis eros non, maximus lorem. Fusce vehicula sed justo at consectetur. Etiam ultricies pulvinar elit vitae faucibus. Maecenas rhoncus est erat, eget pretium metus luctus id. Cras bibendum vel mi nec scelerisque. Donec ac vulputate sapien. Integer quis tellus in mi imperdiet tempus sit amet quis urna. Duis dapibus turpis nec faucibus convallis. Curabitur ac tellus pulvinar, interdum quam vel, vestibulum tellus.</string>
    <string name="title_activity_view_course">Course Details</string>
    <string name="title_activity_view_mentors">Mentor List</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="title_activity_delete_items">DeleteItemsActivity</string>
    <string name="title_activity_term_list">Term List</string>
    <string name="title_activity_note_details">Note Details</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remindMe">Remind Me</string>
    <string name="title_activity_mentor_details">Mentor Details</string>
    <string name="credit">Credit</string>
    <string name="clear_data">Clear Data</string>
    <string name="term_details">Term Details</string>
    <string name="code">Code</string>
    <string name="title">Title</string>
    <string name="assessments">Assessments</string>
    <string name="status">Status</string>

    <string-array name="course_status">
        <item>Pending</item>
        <item>In Progress</item>
        <item>On Hold</item>
        <item>Completed</item>
    </string-array>
</resources>
