<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editTermConstraintLO"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.jlosee.c196practical.TermDetails"
    tools:showIn="@layout/activity_term_details">

    <EditText
        android:id="@+id/termTitle"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/term_name"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_editor_absoluteY="43dp" />

    <EditText
        android:id="@+id/termStart"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/start_date"
        android:inputType="date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termTitle" />

    <EditText
        android:id="@+id/termEnd"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="11dp"
        android:ems="10"
        android:hint="@string/end_date"
        android:inputType="date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termStart"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/startDateButton"
        android:layout_width="@dimen/calendarButtonSquare"
        android:layout_height="@dimen/calendarButtonSquare"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:drawable/ic_menu_today"
        android:onClick="startDateCalendar"
        app:layout_constraintLeft_toRightOf="@+id/termStart"
        app:layout_constraintTop_toTopOf="@+id/termStart" />

    <Button
        android:id="@+id/endDateButton"
        android:layout_width="@dimen/calendarButtonSquare"
        android:layout_height="@dimen/calendarButtonSquare"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:drawable/ic_menu_today"
        android:onClick="endDateCalendar"
        app:layout_constraintLeft_toRightOf="@+id/termEnd"
        app:layout_constraintTop_toTopOf="@+id/termEnd" />

    <Switch
        android:id="@+id/startAlarmSwitch"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:onClick="startAlarmToggled"
        android:text="@string/remindMe"
        app:layout_constraintLeft_toRightOf="@+id/startDateButton"
        app:layout_constraintTop_toTopOf="@+id/startDateButton" />

    <Switch
        android:id="@+id/endAlarmSwitch"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:onClick="endAlarmToggled"
        android:text="@string/remindMe"
        app:layout_constraintLeft_toRightOf="@+id/endDateButton"
        app:layout_constraintTop_toTopOf="@+id/endDateButton" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="395dp"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termEnd">

        <TextView
            android:id="@+id/textViewCourses"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:maxLines="1"
            android:text="Courses" />

        <Button
            android:id="@+id/addCourseButton"
            android:layout_width="@dimen/calendarButtonSquare"
            android:layout_height="@dimen/calendarButtonSquare"
            android:onClick="addCourseClicked"
            android:background="@android:drawable/ic_input_add" />

        <Button
            android:id="@+id/removeCourseButton"
            android:layout_width="@dimen/calendarButtonSquare"
            android:layout_height="@dimen/calendarButtonSquare"
            android:onClick="removeCourseClicked"
            android:background="@android:drawable/ic_delete" />

    </LinearLayout>

    <ListView
        android:id="@+id/courseList"
        android:layout_width="395dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:visibility="visible"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


</android.support.constraint.ConstraintLayout>
