<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.jlosee.c196practical.CourseDetails"
    tools:showIn="@layout/activity_course_details"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Button
        android:id="@+id/courseNotesButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:gravity="bottom"
        android:onClick="courseNotesClicked"
        android:text="Notes"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/courseAssessmentButton"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="135dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:gravity="bottom"
        android:onClick="courseAssessmentsClicked"
        android:text="Assessments"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/courseNotesButton" />

    <EditText
        android:id="@+id/termStart"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/start_date"
        android:inputType="date"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mentorList" />

    <EditText
        android:id="@+id/termEnd"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/end_date"
        android:inputType="date"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/termStart"
        android:layout_marginLeft="10dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/startDateButton"
        android:layout_width="@dimen/calendarButtonSquare"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:drawable/ic_menu_today"
        android:onClick="startDateCalendar"
        app:layout_constraintLeft_toRightOf="@+id/termStart"
        app:layout_constraintTop_toTopOf="@+id/termStart" />

    <Button
        android:id="@+id/endDateButton"
        android:layout_width="@dimen/calendarButtonSquare"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:drawable/ic_menu_today"
        android:onClick="endDateCalendar"
        app:layout_constraintLeft_toRightOf="@+id/termEnd"
        app:layout_constraintTop_toTopOf="@+id/termEnd" />

    <TextView
        android:id="@+id/tvCourseCode"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:inputType="none"
        android:text="Course Code"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etCourseCode"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:enabled="true"
        android:inputType="textPersonName"
        app:layout_constraintLeft_toRightOf="@+id/tvCourseCode"
        app:layout_constraintTop_toTopOf="@+id/tvCourseCode" />

    <EditText
        android:id="@+id/etCourseTitle"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:ems="10"
        android:enabled="true"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:text="Name"
        app:layout_constraintLeft_toRightOf="@+id/tvCourseTitle"
        app:layout_constraintTop_toTopOf="@+id/tvCourseTitle" />

    <TextView
        android:id="@+id/tvCourseTitle"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Course Title"
        android:gravity="center"
        android:inputType="none"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCourseCode" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:text="Description"
        android:textAlignment="viewEnd"
        android:gravity="end"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCourseTitle"
        android:layout_marginStart="16dp" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="334dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:id="@+id/nestedScrollView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <EditText
                android:id="@+id/etDescription"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_weight="2.25"
                android:ems="10"
                android:inputType="textMultiLine"
                android:text="@string/lorem_ipsem"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        app:layout_constraintLeft_toRightOf="@+id/endDateButton"
        app:layout_constraintTop_toBottomOf="@+id/statusText" />

    <TextView
        android:id="@+id/statusText"
        android:layout_width="164dp"
        android:layout_height="40dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Course Status"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/startDateButton"
        app:layout_constraintTop_toTopOf="@+id/startDateButton" />

    <TextView
        android:id="@+id/tvMentor"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="Mentors"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nestedScrollView" />

    <Button
        android:id="@+id/removeMentor"
        android:layout_width="@dimen/calendarButtonSquare"
        android:layout_height="@dimen/calendarButtonSquare"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:drawable/ic_delete"
        android:onClick="removeMentorClicked"
        app:layout_constraintLeft_toRightOf="@+id/addMentor"
        app:layout_constraintTop_toTopOf="@+id/tvMentor" />

    <Button
        android:id="@+id/addMentor"
        android:layout_width="@dimen/calendarButtonSquare"
        android:layout_height="@dimen/calendarButtonSquare"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:background="@android:drawable/ic_input_add"
        android:onClick="addMentorClicked"
        app:layout_constraintLeft_toRightOf="@+id/tvMentor"
        app:layout_constraintTop_toTopOf="@+id/tvMentor" />

    <ListView
        android:id="@+id/mentorList"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:visibility="visible"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMentor" />

</android.support.constraint.ConstraintLayout>
